[package]
name = "tonic_grpc_load_balance"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tonic_grpc_load_balance_client"
path = "src/client.rs"

[[bin]]
name = "tonic_grpc_load_balance_server"
path = "src/server.rs"


[dependencies]
anyhow.workspace = true
derive_builder = "0.20.2"
lazy_static = "1.5.0"
prost.workspace = true
prost-types.workspace = true
quick-xml = "0.37.2"
regex = "1.11.1"

serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9.34"
tokio.workspace = true
tonic.workspace = true
tower = { workspace = true, features = ["discover"] }
tracing.workspace = true
tracing-subscriber.workspace = true

[build-dependencies]
tonic-build.workspace = true

